# 2halfD

./: .gitignore  CMakeLists.txt  README.md
assets/levels/: level1.txt  level1_visualizer.html  level2.txt  level3.txt  level4.txt  level_test_bsp.txt
build_debug/: CPackConfig.cmake  CPackSourceConfig.cmake  two_half
engine/include/TwoHalfD/: circular_buffer.hpp  engine.h  engine_clocks.h  engine_types.h  entity_manager.h  input_manager.h  level_maker.h  renderer.h  time_delta.h
engine/include/TwoHalfD/bsp/: bsp_graph.h  bsp_manager.h  bsp_traverser.h
engine/include/TwoHalfD/shaders/: floorShader.frag  floorshader.frag  perspectiveShader.frag  perspectiveShader2.frag
engine/include/TwoHalfD/types/: animation_types.h  bsp_types.h  entity_types.h  input_types.h  math_types.h
engine/include/TwoHalfD/utils/: math_util.h  physics_util.h
engine/src/: animation_types.cpp  engine.cpp  engine_clocks.cpp  entity_manager.cpp  input_manager.cpp  level_maker.cpp  renderer.cpp  time_delta.cpp
engine/src/bsp/: bsp_graph.cpp  bsp_manager.cpp
engine/src/utils/: circularBuffer.h  mathUtil.h  math_util.cpp  math_util.h  physics_util.cpp
game/: game.cpp  game.h  main.cpp  test_bsp.cpp  visualizer.cpp
notes/: level_design.md
